--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Shivam Madaan</title>
+<link href="https://i.ibb.co/XxXkBtG/Screenshot-2022-01-23-4-30-06-PM.png" type="image">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
