--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-wrench fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Skills</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Front End Web Developer</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-angle-right fa-fw w3-margin-right"></i>Has in depth knowledge of HTML and CSS</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-angle-right fa-fw w3-margin-right"></i>Has good knowledge of HTML,CSS,Javascript & React</h6>
           <hr>
         </div>
         <div class="w3-container">
