--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-            <img src="IMG-20220123-WA0004.jpg" style="width:100%" alt="shivam">
+            <img src="mee.jpg" style="width:100%" alt="shivam">
           <div class="w3-display-bottomleft w3-container w3-text-white">
             <h2>Shivam Madaan</h2>
           </div>
